Fix li wrapping discard icon to a new line

--- a/frontend/src/pages/calendar/CalendarPage.module.scss
+++ b/frontend/src/pages/calendar/CalendarPage.module.scss
@@ -50,6 +50,8 @@
     }
 
     ul > li {
+        display: flex;
+        justify-content: space-between;
         margin: 10px 0;
     }
 }
